2005-09-04  David Bateman <dbateman@free.fr>

	* COLAMD: Update version of colamd to v2.4.
	* COLAMD.files: Add colamd_global.c to COLAMD_SRC and second build of 
	colamd.c for long version.

2005-08-25  David Bateman <dbateman@free.fr>

	* Sparse-op-defs.h (FULL_SPARSE_MUL, SPARSE_FULL_MUL): Macro for
	mixed sparse/full multiply.
	* dSparse.cc (operator *), CSparse.cc (operator *): New operators for
	mixed sparse/full multiply.
	* dSparse.h (operator *), CSparse.h (operator *): Declaration of
	mixed sparse/full multiply operators.

2005-07-25   Erik de Castro Lopo  <erikd@zip.com.au>

	* oct-inttypes.h (OCTAVE_S_US_FTR): Compare <= 0 instead of < 0 to
	avoid warnings for unsigned types.

2005-07-07  John W. Eaton  <jwe@octave.org>

	* dSparse.cc (SparseMatrix::factorize): Initialize Numeric to 0.
	* CSparse.cc (SparseComplexMatrix::factorize:) Likewise.

2005-06-15  John W. Eaton  <jwe@octave.org>

	* oct-rl-edit.c (flush_stdout): Rename from no_redisplay.
	Flush stdout here.
	(octave_rl_clear_screen): Set rl_redisplay_function to flush_stdout.

	* Array.h (Array::resize): Change int args to octave_idx_type.

2005-06-14  John W. Eaton  <jwe@octave.org>

	* CMatrix.cc, CNDArray.cc, CSparse.cc, dMatrix.cc, dNDArray.cc,
	dSparse.cc, lo-cieee.c, lo-mappers.cc: Change all uses of
	octave_is_NaN_or_NA to xisnan.

	* lo-mappers.h (octave_is_NaN_or_NA): Mark with GCC_ATTR_DEPRECATED.
	* lo-ieee.h (lo_ieee_is_NaN_or_NA): Likewise.

	* lo-cieee.c (lo_ieee_is_NaN_or_NA): Now just a wrapper for
	lo_ieee_isnan.

	* dMatrix.cc (Matrix::too_large_for_float): Only check if abs
	value is greater than FLT_MAX.
	* CMatrix.cc (ComplexMatrix::too_large_for_float): Ditto.
	* dNDArray.cc (NDArray::too_large_for_float): Ditto.
	* CNDArray.cc (ComplexNDArray::too_large_for_float): Ditto.

	* dMatrix.cc (Matrix::too_large_for_float): Special case Inf
	values too.
	* CMatrix.cc (ComplexMatrix::too_large_for_float): Ditto.

	* dNDArray.cc (NDArray::too_large_for_float): Likewise for NaN,